# agentguard

./: .env.example  .gitignore  .trace_sync  AI_CONTEXT.md  CHANGELOG.md  CLAUDE.md  README.md  governance.yaml.example  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentguard/: __init__.py  ai_review.py  cli.py  notifications.py  proposal.py
agentguard/checks/: __init__.py  cost.py  preflight.py  report.py  runtime.py
agentguard/config/: __init__.py  loader.py
agentguard/enforcement/: enforcer.py  transcript.py
agentguard/guided/: concretizer.py  pinning.py  validator.py
agentguard/output/: __init__.py  renderer.py
agentguard/review/: __init__.py  reviewer.py
agentguard/templates/: claude_md_block.md  governance.yaml
agentguard/web/: server.py
demo/: agentguard-demo.html
scripts/: build_web.sh
tests/: test_ai_review.py  test_cli.py  test_concretizer_context.py  test_config.py  test_cost.py  test_enforcer.py  test_guided.py  test_pinning.py  test_preflight.py  test_proposal.py  test_renderer.py  test_report.py  test_reviewer.py  test_runtime.py  test_stop_handler.py  test_transcript.py  test_validator.py  test_verify.py  test_web_server.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  index.css
web/src/components/: CheckPanel.jsx  GovernanceSummary.jsx  GovernanceView.jsx  InitPanel.jsx  ReportPanel.jsx  ReviewPanel.jsx  StatusBadge.jsx  TerminalPanel.jsx  VerifyPanel.jsx  WatchPanel.jsx
