[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentguard-governance"
version = "1.0.1"
description = "Governance layer for autonomous AI agents — pre-flight checks, runtime monitoring, and post-session reporting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentGuard Contributors" }]
keywords = ["ai", "agents", "governance", "safety", "llm", "agentic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pathspec>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "httpx>=0.27",
]
ai = ["anthropic>=0.25", "openai>=1.0"]
web = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]
all = ["anthropic>=0.25", "openai>=1.0", "fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]

[project.scripts]
agentguard = "agentguard.cli:main"

[project.urls]
Homepage = "https://github.com/MyPatric69/agentguard"
Issues = "https://github.com/MyPatric69/agentguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentguard"]

[tool.hatch.build.targets.sdist]
artifacts = ["agentguard/web/dist/**/*"]
include = [
    "agentguard/**",
    "agentguard/web/dist/**/*",
    "scripts/**",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
